--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+       // google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
@@ -14,6 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
+        //google()
         mavenLocal()
         jcenter()
         maven {
