modal login update

--- a/ios/strokeAppSp/Info.plist
+++ b/ios/strokeAppSp/Info.plist
@@ -10,7 +10,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>strokeAppSp</string>
+	<string>Cuidando a los Padres</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
